# shrek

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  install_models.py  requirements.txt  run.py  slackbot_settings.py
chatbot/: Cargo.toml
chatbot/src/: lib.rs
gpt2/: .dockerignore  Cargo.toml  Dockerfile  README.md  run.sh
gpt2/client/: Cargo.toml
gpt2/client/src/: lib.rs
gpt2/proto/: Cargo.toml  build.rs  gpt2.proto
gpt2/proto/src/: lib.rs
gpt2/server/: Cargo.toml
gpt2/server/src/: generator.rs  main.rs
plugins/: echo.py  emoji.py  giphy.py  give_him_the.py  gpt2.py  love.py  markov.py  polite.py  util.py  yes.py  youtube.py
shrek/: Cargo.toml
shrek/src/: emoji.rs  gpt2.rs  history.rs  main.rs
slack/: Cargo.toml
slack/src/: lib.rs
uberduck/: Cargo.toml
uberduck/src/: lib.rs
website/api/: Cargo.toml
website/backend/: Cargo.toml
website/backend/src/: main.rs
website/frontend/: Cargo.toml  Trunk.toml  index.html  index.scss  tailwind.config.js
website/frontend/src/: index.css  main.rs
