[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = { path = "../slack" }

async-trait = "0.1.52"
futures = "0.3.19"
regex = "1.5.4"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["sync", "rt"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tracing = "0.1.29"
