[package]
name = "uberduck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.22"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
tracing = "0.1.29"
tokio = { version = "1.15.0", features = ["time"] }
bytes = "1.1.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.15.0", features = ["macros"] }
