[package]
name = "gpt2_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
gpt2_proto = { path = "../proto" }
prost = "0.9.0"
rust-bert = "0.17.0"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.2"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
