[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.3", features = ["ws"] }
gpt2_client = { path = "../../gpt2/client" }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
