[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
gloo-console = "0.2.1"
gloo-net = { version = "0.2.0", default-features = false, features = ["websocket"] }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "41fc140675389389b10d1175de260cf9f51ebb5d", features = ["suspense"] }
web-sys = "0.3.57"
