[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
gloo-console = "0.2.1"
gloo-net = { version = "0.2.0", default-features = false, features = ["websocket"] }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "5284b8de87fb731ea19642e81df370c178ebd159", features = ["suspense"] }
web-sys = "0.3.57"
